--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ charset-normalizer==3.2.0
 cryptography==41.0.4
 defusedxml==0.8.0rc2
 Django==4.2.5
+django-colorfield==0.10.1
+django-filter==23.3
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
@@ -25,5 +27,5 @@ sqlparse==0.4.4
 typing-extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.5
-django-colorfield
 gunicorn==20.1.0
+psycopg2-binary==2.9.9
