--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,36 @@
 server {
     listen 80;
+
+    client_max_body_size 20M;
+    server_tokens off;
+
+    location /media/ {
+        root /var/html;
+    }
+
+    location /static/admin {
+        root /var/html;
+    }
+
+     location /static/rest_framework/ {
+        root /var/html/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/api/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -17,5 +44,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
